modifique las rutas y los link de las imagenes

--- a/vistas/actividades.html
+++ b/vistas/actividades.html
@@ -15,14 +15,14 @@
 
 <body >
     <div class="info">
-        <p>SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño</p>
+        <p>SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
     </div>
 
     <header class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">SpecialTravel</a>
+                <a class="navbar-brand" href="../index.html">SpecialTravel</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -68,21 +68,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/img/travel1.jpg" class="d-block w-100" alt="globos aeroestaticos">
+                <img src="../img/travel1.jpg" class="d-block w-100" alt="globos aeroestaticos">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Vive tus sueños que nadie te dentenga.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/canoa.jpg" class="d-block w-100" alt="paseo en canoa">
+                <img src="../img/canoa.jpg" class="d-block w-100" alt="paseo en canoa">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Recorre y explora todo el mundo.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/travel2.png" class="d-block w-100" alt="lugares del mundo">
+                <img src="../img/travel2.png" class="d-block w-100" alt="lugares del mundo">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Haz la travesia mas grandiosa de la vida.</p>
@@ -144,7 +144,7 @@
                         <li>Buceo profesional.</li>
                     </ul>
                     <div class="card" style="width: 14rem;">
-                        <img src="/img/parque-acuatico.jpg" class="card-img-top" alt="parque-acuatico">
+                        <img src="../img/parque-acuatico.jpg" class="card-img-top" alt="parque-acuatico">
                         <div class="card-body">
                         <h5 class="card-title">Parque acuatico</h5>
                         <p class="card-text">Un parque acuático puede tener una diversidad de atracciones muy amplia, que se pueden determinar por la dimensión de terreno, la localización, el plan de negocio que se tenga, etc..</p>
@@ -152,7 +152,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 14rem;">
-                        <img src="/img/cancun.jpg" class="card-img-top" alt="parque cancun">
+                        <img src="../img/cancun.jpg" class="card-img-top" alt="parque cancun">
                         <div class="card-body">
                         <h5 class="card-title">Parque acuatico</h5>
                         <p class="card-text">El parque Xcaret de Cancún y Riviera Maya fue galardonado como el mejor parque temático y acuático del mundo, según los Travvy Awards.
@@ -161,7 +161,7 @@
                     </div>
                     </div>
                     <div class="card" style="width: 14rem;">
-                        <img src="/img/pisc.jpg" class="card-img-top" alt="piscinas yjuegos">
+                        <img src="../img/pisc.jpg" class="card-img-top" alt="piscinas yjuegos">
                         <div class="card-body">
                         <h5 class="card-title">Parque acuatico</h5>
                         <p class="card-text">Un parque acuático puede tener una diversidad de atracciones muy amplia, que se pueden determinar por la dimensión de terreno, la localización, el plan de negocio que se tenga, etc..</p>
