--- a/vistas/vuelos.html
+++ b/vistas/vuelos.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">SpecialTravel</a>
+                <a class="navbar-brand" href="../index.html">SpecialTravel</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -73,7 +73,7 @@
 
         <div class="card__vuelos">
             <div class="card" style="width: 19rem;">
-                <img src="/img/amsterdan.jpg" class="card-img-top" alt="Amsterdan">
+                <img src="../img/amsterdan.jpg" class="card-img-top" alt="Amsterdan">
                 <div class="card-body">
                     <h5 class="card-title">Amsterdan</h5>
                     <p class="card-text">Para un relax sin igual, nada como una visita al spa, que ofrece masajes. Aprovecha las instalaciones recreativas, que incluyen una piscina cubierta, un sauna y una sala de fitness.</p>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="card" style="width: 19rem;">
-                <img src="/img/paris.jpg" class="card-img-top" alt="paris">
+                <img src="../img/paris.jpg" class="card-img-top" alt="paris">
                 <div class="card-body">
                     <h5 class="card-title">Paris</h5>
                     <p class="card-text">te sentirás como nuevo gracias a los masajes. Tienes además una terraza en la azotea donde sentarte a contemplar el paisaje. Otros servicios de este hotel incluyen servicio de cuidado de niños con cargo</p>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="card" style="width: 19rem;">
-                <img src="/img/singapure.jpg" class="card-img-top" alt="Singapure">
+                <img src="../img/singapure.jpg" class="card-img-top" alt="Singapure">
                 <div class="card-body">
                     <h5 class="card-title">Singapure</h5>
                     <p class="card-text">Prueba las especialidades de cocina asiática en LIME, restaurante con un bar. O, cuando quieras seguir descansando, llama al servicio a la habitación disponible las 24 horas. Y para darle el punto final a tu día de la mejor forma, tómate un refrescante cocktail en el bar junto a la piscina.</p>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="card" style="width: 19rem;">
-                <img src="/img/riodejaneiro.jpg" class="card-img-top" alt="rio de janeiro">
+                <img src="../img/riodejaneiro.jpg" class="card-img-top" alt="rio de janeiro">
                 <div class="card-body">
                     <h5 class="card-title">Rio de Janeiro"</h5>
                     <p class="card-text">Sumérgete en una de las 2 piscinas al aire libre, o disfruta de otras instalaciones recreativas, como sauna y sala de fitness abierta las 24 horas.Prueba deliciosos platillos sin tener que salir de este hotel, que te ofrece un restaurante y un variado menú de servicio a la habitación disponible las 24 horas.</p>
