--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">SpecialTravel</a>
+                <a class="navbar-brand" href="../index.html">SpecialTravel</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -112,7 +112,7 @@
 
             <div class="div__consultas">
                 <div>
-                    <img src="/img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
+                    <img src="../img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
                     <p class="pregunta"><strong>"Preguntas Frecuentes"</strong> </p>
                 </div>
 
