modifique las media queries de contacto/alojamiento

--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -67,7 +67,7 @@
 
     <main class="main__contactos">
         <section class="section__contactos">
-            <h2 class="contenedor__subtitulo"><strong>Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</strong></h2>
+            <h2 class="contacto__subtitulo">Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h2>
             <hr>
             
             <div >
@@ -112,7 +112,7 @@
 
             <div class="div__consultas">
                 <div>
-                    <img src="../img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
+                    <img class="img-fluid" src="../img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
                     <p class="pregunta"><strong>"Preguntas Frecuentes"</strong> </p>
                 </div>
 
