modifique las imagenes en la vista de actividades

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         </nav>
     </header>
-
+    <div class="container-fluid">
     <main> 
         <div class=titulobanner>
             <h1 class="titulo__principal">welcome to SpecialTravel</h1>
@@ -111,6 +111,8 @@
         </section>
     </main>
 
+    </div>
+
     <footer class="footer">
         <div class="footer__redes">
             <a href="#"><img class="redes__item" src="./img/facebook_icon-icons.com_53612.svg" alt="logo de facebook"></a>
@@ -119,7 +121,7 @@
             <a href="#"><img class="redes__item" src="./img/whatsapp.svg" alt="logo de whatsapp"></a>
         </div>
         <div class="footer__Texto">
-            <p>SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
+            <p class="footer__p">SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
         </div>
     </footer>
 
