--- a/vistas/vuelos.html
+++ b/vistas/vuelos.html
@@ -68,8 +68,9 @@
 
     <section class="section__vuelos">
         <article>
-            <p class="contenedor__p">Indica el aeropuerto de salida y destino, así como las fechas del vuelo deseado para ver las ofertas de vuelos relevantes.Filtra las diferentes ofertas según tus criterios para encontrar los billetes de avión que coincidan con tus diferentes requisitos.Completa tu búsqueda de vuelos fácilmente reservando un billete de ida y vuelta en uno de los sitios web de SpecialTravel mencionados.</p>
+            <p class="vuelos__parrafo">Indica el aeropuerto de salida y destino, así como las fechas del vuelo deseado para ver las ofertas de vuelos relevantes.Filtra las diferentes ofertas según tus criterios para encontrar los billetes de avión que coincidan con tus diferentes requisitos.Completa tu búsqueda de vuelos fácilmente reservando un billete de ida y vuelta en uno de los sitios web de SpecialTravel mencionados.</p>
         </article>
+        <hr>
 
         <div class="card__vuelos">
             <div class="card" style="width: 19rem;">
@@ -146,9 +147,10 @@
                     <td>Fechas disponibles</td>
                     <td><input type='date'  name="date" id="date" required></td>
                 </table>
+                <button type="submit" class="btn btn-outline-secondary" input type="submit" value="Reservar ">Reservar</button>
             </div>
             <div class="botton">
-                <button type="submit" class="btn btn-outline-secondary" input type="submit" value="Reservar ">Reservar</button>
+                
                 <label for="Metodo de pago">Metodo de pago</label>
                 <select name="Metodo de pago" id="Metododepago">
                     <option value="#"></option>
