--- a/vistas/alojamientoytraslado.html
+++ b/vistas/alojamientoytraslado.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--estilos bs-->
+    <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
     <!--AOS-->
@@ -117,7 +117,7 @@
                     </div>
                 
             </div>
-
+            <div></div>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group me-2" role="group" aria-label="Second group">
                         <button type="button" class="btn btn-secondary">1</button>
@@ -128,6 +128,7 @@
                         <button type="button" class="btn btn-secondary">6</button>
                     </div>
             </div>
+
             <div class="alojamiento__info">
                 <p class="contenedor__p">Si buscás relajarte y no preocuparte por nada, o viajás por pocos días, quizá te convenga hospedarte en un hotel. Si te quedás más tiempo en el destino y te gusta disfrutar de la libertad de hacer tus propios planes, los alojamientos, como departamentos o casas, son ideales. Compará las ventajas y desventajas de los hoteles y los alojamientos, y elegí el que más te guste A la hora de elegir hospedarte en un hotel o un alojamiento, tipo departamento o casa, tené en cuenta los comentarios de otros viajeros que hayan estado ahí.</p>
                 <p class="contenedor__p" >¿Querés recibir ofertas exclusivas de hoteles? ¡Suscribite a nuestra  <a href="./contactos.html">website!</a></p>
