--- a/vistas/actividades.html
+++ b/vistas/actividades.html
@@ -171,8 +171,8 @@
                 </p>
 
                 <div class="tarjetas__zoo" >
-                    <div class="container">
-                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="container-fluid">
+                        <div class="row row-cols-1 row-cols-md-2 g-4">
                         <div class="col">
                             <div class="card">
                                 <img class="img-fluid" src="../img/zoointeraccion.jpg" class="card-img-top" alt="zoológico">
@@ -209,7 +209,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        </div>
                     </div>
                 </div>
         </div>
