modifique los margenes de la estructura

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <h2>Live Your Dreams</h2>
         <div class="line"></div>
         <h1>Welcome To SpecialTravel</h1>
-        <a class="btn__header" href="#"    >Learn More</a>
+        <a class="btn__l" href="#"    >Learn More</a>
     </div>
     </header>
 
     <main>
 <!--seccion-eventos-->
     <section class="eventos">
-        <div class="eventos__titulo">
+        <div class="titulos">
             <h1>Proximos Eventos</h1>
             <div class="line"></div>
         </div>
@@ -82,19 +82,19 @@
                 <img src="./img/senderismo11.jpg" alt="senderismo" class="responsive-img">
                 <h4 class="eventos__subtitulos">Senderismo</h4>
                 <p class="eventos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo.</p>
-                <a href="#" class="btn__header">Learn More</a>
+                <a href="#" class="btn__l">Learn More</a>
             </div>
             <div class="col">
                 <img src="./img/fogata .jpg" alt="fogata en la noche" class="responsive-img" >
                 <h4 class="eventos__subtitulos">Camping</h4>
                 <p class="eventos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo.</p>
-                <a href="#" class="btn__header">Learn More</a>
+                <a href="#" class="btn__l">Learn More</a>
             </div>
         </div>
     </section>
     <section>
         <div>
-            
+
         </div>
     </section>
 
