--- a/vistas/actividades.html
+++ b/vistas/actividades.html
@@ -14,11 +14,12 @@
 </head>
 
 <body >
+
     <div class="info">
         <p>SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
     </div>
 
-    <header class="header-bs" >
+    <navbar class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
@@ -58,8 +59,9 @@
             </div>
 
         </nav>
-    </header>
+    </navbar>
 
+<!------portada/carrusel----->
     <div id="carouselactividades" class="carousel slide">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselactividades" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -101,8 +103,12 @@
     </div>
 
     <main class="main__actividades">
-        <div class="contenedor__actividades"> 
-            <h2 class="act__subtitulo">Paseos En Bicis</h2>
+
+        <div class="contenedor__actividades">
+            <div class="titulos">
+                <h2>Paseos En Bicis</h2>
+                <div class="line"></div>
+            </div>
             <section class="textcard">
                 <div class="card" style="width: 22rem;">
                         <img src="../img/ciclismo.jpg" class="card-img-top" alt="imagen de ciclismo"></a>
@@ -125,7 +131,10 @@
             </section>
         </div>    
         <div class="contenedor__nadar">
-            <h2 class="act__subtitulo">Nadar</h2>
+            <div class="titulos">
+                <h2>Nadar</h2>
+                <div class="line"></div>
+            </div>
                 <p class="contenedor__p">Los parques acuáticos son centros de recreación masiva, construidos y equipados con atracciones y juegos básicamente con agua. Son en esencia centros para disfrutar con seguridad durante horas en compañía de amigos y familiares. Están ubicados en todas partes del mundo, en cualquier tipo de zona climática, cerca o dentro de las ciudades. Actualmente hay empresas que pueden asesorar en el montaje de este tipo de parques, incluso hacer tematizaciones, ante proyectos, etc.
                 </p> 
                 <div class="list__piscina">
@@ -165,8 +174,12 @@
                     </div>
                 </div>
         </div>
+
         <div class="contenedor__zoologico">
-            <h2 class="act__subtitulo">Visitar un Zoológico</h2>
+            <div class="titulos">
+                <h2>Visitar un Zoológico</h2>
+                <div class="line"></div>
+            </div>
                 <p class="contenedor__p"> Tambien ofrecemos recorridos o tours comentados , en el que se exhiben animales dentro de recintos expuestos al público y en el que tambien pueden interactuar y disfrutar de unas de las experencias mas enriquecedoras , como una interaccion mucha mas inmersiva y realista.
                 </p>
 
@@ -213,8 +226,12 @@
                     </div>
                 </div>
         </div>
+
         <div class="contenedor__excursiones">
-            <h2 class="act__subtitulo">Excursiones al aire libre</h2>
+            <div class="titulos">
+                <h2>Excursiones al aire libre</h2>
+                <div class="line"></div>
+            </div>
                 <p class="contenedor__p">Como en cualquier deporte, practicando senderismo nos ponemos en forma, y al no ser un deporte de altas exigencias, en cada excursión nos podemos ir marcando unas metas que harán que vaya mejorando nuestro estado físico, nuestra resistencia y nuestra capacidad pulmonar. Al ser un deporte aeróbico en el que se activa la circulación, es un ejercicio ideal para prevenir enfermedades cardíacas, y para disminuir la tensión arterial. Además, ayuda a mejorar los niveles de colesterol y la diabetes.</p>
                 <div class="tarjetas__zoo" >
                     <div class="container-fluid">
@@ -245,6 +262,7 @@
                     </div>
                 </div>
         </div>
+
     </main> 
 
     <footer class="footer">
