--- a/vistas/vuelos.html
+++ b/vistas/vuelos.html
@@ -21,7 +21,7 @@
         <p>SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño</p>
     </div>
 
-    <header class="header-bs" >
+    <navbar class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
@@ -61,11 +61,14 @@
             </div>
 
         </nav>
-    </header>
+    </navbar>
 
     <main class="main__vuelos">
-
-    <section class="section__vuelos">
+        <section class="section__vuelos">
+            <div class="titulos">
+                <h1>Destinos de Viajes</h1>
+                <div class="line"></div>
+            </div>
         <article>
             <p class="vuelos__parrafo">Indica el aeropuerto de salida y destino, así como las fechas del vuelo deseado para ver las ofertas de vuelos relevantes.Filtra las diferentes ofertas según tus criterios para encontrar los billetes de avión que coincidan con tus diferentes requisitos.Completa tu búsqueda de vuelos fácilmente reservando un billete de ida y vuelta en uno de los sitios web de SpecialTravel mencionados.</p>
         </article>
@@ -139,7 +142,11 @@
 
 
         </div>
-
+        <hr>
+        <div class="titulos">
+            <h1>Facturacion</h1>
+            <div class="line"></div>
+        </div>
         <form class="form__vuelos"> 
             <div class="calendario">
                 <table class="calendario">
@@ -164,21 +171,22 @@
             </div>
             <br>
         </form>
-
+        <hr>
         <article class="videos__vuelos">
-            <p><strong>Que esperas para vivir tus sueños , solo se vive una vez !!!</strong> </p>
             <div class="videos__responsive">
                     <div class="ratio ratio-16x9">
                         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/PSbnH-dNq2g" title="✈️ Países BARATOS para VIAJAR ⭐️ TOP 15 Destinos Económicos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                     </div>
-                    <h3 class="subtitulo__vuelos"><strong>Descuentos especiales solo por hoy :</strong> </h3>
+                    <div class="titulos">
+                        <h1>TOP 10 Lugares</h1>
+                        <div class="line"></div>
+                    </div>
                     <div class="ratio ratio-16x9" >
                         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2Xz65_767Gg" title="¡Top 10 Lugares Más BELLOS del MUNDO!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                     </div> 
             </div>
         </article>
-    </section>
-
+        </section>
     </main>
 
     <footer class="footer">
