--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -23,7 +23,7 @@
         <p>SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño</p>
     </div>
 
-    <header class="header-bs" >
+    <navbar class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
@@ -63,13 +63,17 @@
             </div>
 
         </nav>
-    </header>
+    </navbar>
 
     <main class="main__contactos">
         <section class="section__contactos">
-            <h2 class="contacto__subtitulo">Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h2>
+
+            <div class="titulos-contactos">
+                <h1>Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h1>
+                <div class="line"></div>
+            </div>
+<!-------seccion-Form------>
             <hr>
-            
             <div >
                 <form class="form">
                     <label for='name' class="form-label">Nombre:</label>
@@ -105,11 +109,12 @@
                     <br>
                 </form>
             </div>
-
+<!-------seccion-Maps------>
             <div >
                 <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.102123074673!2d-58.55841627085595!3d-34.55096961855391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb9fe4f104a0b%3A0x4b261824f04140fb!2sVilla%20Ballester!5e0!3m2!1ses!2sar!4v1673664223263!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
+<!----seccion-consultas---->
             <div class="div__consultas">
                 <div>
                     <img class="img-fluid" src="../img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
@@ -125,6 +130,7 @@
                 </ul>
             </div>
         </section>
+
     </main>
 
     <footer class="footer">
