--- a/vistas/alojamientoytraslado.html
+++ b/vistas/alojamientoytraslado.html
@@ -21,11 +21,11 @@
 
 <body> 
 
-    <div class="info">
+<div class="info">
         <p>SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño</p>
-    </div>
+</div>
 
-    <navbar class="header-bs" >
+<navbar class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
             <div class="container-fluid">
@@ -65,14 +65,22 @@
             </div>
 
         </nav>
-    </navbar>
-    
-    <main class="main__aloja">
-        <div class="titulos">
+</navbar>
+
+<main class="main__aloja">
+    <div class="titulos">
             <h2>Hoteles y Alojamientos</h2>
             <div class="line"></div>
+    </div>
+    <div class="aloja__banner1">
+        <div class=banner__info>
+            <h2 class="banner__subtitulo">Live Your Dreams</h2>
+            <div class="line"></div>
+            <h1 class="banner__titulo">Welcome To SpecialTravel</h1>
+            <a class="btn__l" href="#">Learn More</a>
         </div>
-        <div class="gallery-contenedor">
+    </div>
+    <div class="gallery-contenedor">
                     <div class="gallery__item">
                         <img src="../img/hotel1.jpg" alt="hoteles" class="gallery__img">
                         <h2 class="gallery__title">Reservalo $14.50 </h2>
@@ -118,14 +126,14 @@
                         <h2 class="gallery__title">Reservalo $99.45</h2>
                     </div>
                 
-        </div>
-        <div class="alojamiento__info">
+    </div>
+    <div class="alojamiento__info">
                 <p class="contenedor__p">Si buscás relajarte y no preocuparte por nada, o viajás por pocos días, quizá te convenga hospedarte en un hotel. Si te quedás más tiempo en el destino y te gusta disfrutar de la libertad de hacer tus propios planes, los alojamientos, como departamentos o casas, son ideales. Compará las ventajas y desventajas de los hoteles y los alojamientos, y elegí el que más te guste A la hora de elegir hospedarte en un hotel o un alojamiento, tipo departamento o casa, tené en cuenta los comentarios de otros viajeros que hayan estado ahí.</p>
-                <p class="contenedor__p" >¿Querés recibir ofertas exclusivas de hoteles? ¡Suscribite a nuestra  <a href="./contactos.html">website!</a></p>
-        </div>
-    </main>
+                <p class="contenedor__p" >¿Querés recibir ofertas exclusivas de hoteles? ¡Suscribite a nuestra <a class="btn__l" href="./contactos.html">website!</a></p>
+    </div>
+</main>
 
-    <footer class="footer">
+<footer class="footer">
         <div class="footer__redes">
             <a href="#"><img class="redes__item" src="../img/facebook_icon-icons.com_53612.svg"alt="logo de facebook"></a>
             <a href="#"><img class="redes__item" src="../img/instagram.svg" alt="logo de instagram"></a>
@@ -135,11 +143,11 @@
         <div class="footer__Texto">
             <p>SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
         </div>
-    </footer>
+</footer>
 
-    <script> AOS.init();</script>
+<script> AOS.init();</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.  min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.  min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+</script>
 </body>
 </html>
