modifique los font size media 320px y agregue cambios varios

--- a/vistas/alojamientoytraslado.html
+++ b/vistas/alojamientoytraslado.html
@@ -38,10 +38,10 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./actividades.html">Actividades</a>
+                        <a class="nav-link " aria-current="page" href="./actividades.html">Actividades</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./alojamientoytraslado.html">Alojamiento/traslado</a>
+                        <a class="nav-link active" href="./alojamientoytraslado.html">Alojamiento/traslado</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="./vuelos.html">Vuelos</a>
