--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -36,7 +36,7 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./actividades.html">Actividades</a>
+                        <a class="nav-link " aria-current="page" href="./actividades.html">Actividades</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="./alojamientoytraslado.html">Alojamiento/traslado</a>
@@ -46,7 +46,7 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
 
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./contactos.html">Contactos</a></li>
@@ -68,7 +68,7 @@
 <main class="main__contactos">
     <section class="section__contactos">
         <div class="titulos-contactos">
-                <h1>Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h1>
+                <h1 class="contactos__titulos">Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h1>
                 <div class="line"></div>
         </div>
 <!-------seccion-Form------>
