--- a/vistas/actividades.html
+++ b/vistas/actividades.html
@@ -45,7 +45,7 @@
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
 
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/vistas/contactos.html">Contactos</a></li>
+                                <li><a class="dropdown-item" href="./contactos.html">Contactos</a></li>
                                 <li><a class="dropdown-item" href="#">Reservas</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Plan de vuelos</a></li>
@@ -62,6 +62,41 @@
 </navbar>
 
 <!------portada/carrusel----->
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../img/deportes1.jpg" class="d-block w-100" alt="deportes">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/deportes2.jpg" class="d-block w-100" alt="deportes">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/deportes3.jpg" class="d-block w-100" alt="deportes">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+
 <div id="carouselactividades" class="carousel slide">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselactividades" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -100,7 +135,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-</div>
+</div>-->
 
 <main class="main__actividades">
     <div class="contenedor__actividades">
@@ -142,10 +177,10 @@
         </div>
         <div class="nadar__banner1">
             <div class=banner__info>
-                                    <h2 class="banner__subtitulo">Live Your Dreams</h2>
-                                    <div class="line"></div>
-                                    <h1 class="banner__titulo">Welcome To SpecialTravel</h1>
-                                    <a class="btn__l" href="#">Learn More</a>
+                <h2 class="banner__subtitulo">Live Your Dreams</h2>
+                <div class="line"></div>
+                <h1 class="banner__titulo">Welcome To SpecialTravel</h1>
+                <a class="btn__l" href="#">Learn More</a>
             </div>
         </div>
         <div class="list__piscina">
@@ -183,7 +218,10 @@
                 <h2>Excursiones al aire libre</h2>
                 <div class="line"></div>
         </div>
+        <div>
             <p class="contenedor__p">Como en cualquier deporte, practicando senderismo nos ponemos en forma, y al no ser un deporte de altas exigencias, en cada excursión nos podemos ir marcando unas metas que harán que vaya mejorando nuestro estado físico, nuestra resistencia y nuestra capacidad pulmonar. Al ser un deporte aeróbico en el que se activa la circulación, es un ejercicio ideal para prevenir enfermedades cardíacas, y para disminuir la tensión arterial. Además, ayuda a mejorar los niveles de colesterol y la diabetes.</p>
+        </div>
+        
         <div class="excursiones__banner1">
                 <div class=banner__info>
                         <h2 class="banner__subtitulo">Live Your Dreams</h2>
@@ -230,5 +268,4 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
-</html>
+</body></html>
