modifique ruta de logo index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Raleway:wght@100;400&display=swap" rel="stylesheet">
     
-    <link rel="shortcut icon" type="" href="../img/logosolapa.jpg">
+    <link rel="shortcut icon" type="" href="./img/logosolapa.jpg">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>SpecialTtravel</title>
 </head>
