--- a/vistas/alojamientoytraslado.html
+++ b/vistas/alojamientoytraslado.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
@@ -12,19 +11,21 @@
     <!--AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+    <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Raleway:wght@100;400&display=swap" rel="stylesheet">
-    
+
+    <!--estilo CSS-->
     <link rel="shortcut icon" type="" href="../img/logosolapa.jpg">
     <link rel="stylesheet" type="text/css" href="../css/estilo.css">
     <title>Alojamiento/Traslado</title>  
 </head>
 
 <body> 
-
-<div class="info">
-        <p>SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño</p>
+<!------publicidad----->
+<div class="body__info">
+    <p class="body__p">SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
 </div>
-
+<!------NavBar----->
 <navbar class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
@@ -66,7 +67,7 @@
 
         </nav>
 </navbar>
-
+<!---Cont/Principal--->
 <main class="main__aloja">
     <div class="titulos">
             <h2>Hoteles y Alojamientos</h2>
@@ -132,22 +133,20 @@
                 <p class="contenedor__p" >¿Querés recibir ofertas exclusivas de hoteles? ¡Suscribite a nuestra <a class="btn__l" href="./contactos.html">website!</a></p>
     </div>
 </main>
-
+<!------Footer------->
 <footer class="footer">
-        <div class="footer__redes">
-            <a href="#"><img class="redes__item" src="../img/facebook_icon-icons.com_53612.svg"alt="logo de facebook"></a>
-            <a href="#"><img class="redes__item" src="../img/instagram.svg" alt="logo de instagram"></a>
-            <a href="#"><img class="redes__item" src="../img/twitter.png" alt="logo de twitter"></a>
-            <a href="#"><img class="redes__item" src="../img/whatsapp.svg" alt="logo de whatsapp"></a>
-        </div>
-        <div class="footer__Texto">
-            <p>SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
-        </div>
+    <div class="footer__redes">
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/facebook_icon-icons.com_53612.svg"alt="logo de facebook"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/instagram.svg" alt="logo de instagram"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/twitter.png" alt="logo de twitter"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/whatsapp.svg" alt="logo de whatsapp"></a>
+    </div>
+    <div class="footer__Texto">
+        <p class="footer__p">SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
+    </div>
 </footer>
-
 <script> AOS.init();</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.  min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-</script>
+<!------Script JS------->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
