--- a/vistas/contactos.html
+++ b/vistas/contactos.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!--bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--estilos bs-->
 
+    <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Raleway:wght@100;400&display=swap" rel="stylesheet">
 
+    <!--estilo CSS-->
     <link rel="shortcut icon" type="" href="../img/logosolapa.jpg">
     <link rel="stylesheet" type="text/css" href="../css/estilo.css">
     <title>Contactos</title>  
 </head>
 
 <body>
-
-<div class="info">
-        <p>SpecialTravel Tu Mejor Opcion Para Vivir Tu Sueño</p>
+<!------publicidad----->
+<div class="body__info">
+    <p class="body__p">SpecialTravel la Mejor Opcion Para Vivir Tu Sueño</p>
 </div>
-
+<!--------NavBar------->
 <navbar class="header-bs" >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
@@ -64,84 +64,98 @@
 
         </nav>
 </navbar>
-
+<!---Cont/Principal--->
 <main class="main__contactos">
-    <section class="section__contactos">
-        <div class="titulos-contactos">
-                <h1 class="contactos__titulos">Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h1>
-                <div class="line"></div>
-        </div>
+<!--seccion-contactos-->
+<section class="section-contactos">
+    <div class="section-contactos__titulos">
+            <h1 class="section-contactos__h1">Para comunicarse con nosotros por favor utilice nuestros canales de informacion!!!</h1>
+            <div class="line"></div>
+    </div>
 <!-------seccion-Form------>
-        <hr>
-        <form class="form">
-                    <label for='name' class="form-label">Nombre:</label>
-                    <input type="text" class="form-control" name="name" id="name" required>
-                    <br>
-                    <br>
-                    <label for='Telefono' class="form-label">Telefono:</label>
-                    <input type="text" class="form-control" name="Telefono" id="Telefono" required>
-                    <br>
-                    <br>
-                    <label for="email" class="form-label">Correo Electronico:</label>
-                    <input type="email" class="form-control" id="email"required placeholder="ingresa tu corre Electronico">
-                    <br>
-                    <label for="Tipodeconsulta">Tipo de consulta</label>
-                    <select name="Tipo de consulta" id="Tipodeconsulta">
-                        <option value="#"></option>
-                        <option value="Reprogramacion del vuelo">Reprogramacion del vuelo</option>
-                        <option value="reservas">Reservas</option>
-                        <option value="administrativo">Administrativo</option>
-                        <option value="turismo">Turismo</option>
-                        <option value="otros">Otros..</option>
-                    </select>
-                    <br>
-                    <div class="mb-3">
-                        <label for="Consultas" class="form-label">Consultas:</label>
-                        <textarea class="form-control" id="Consultas" rows="10" ></textarea>
-                        <button type="submit" class="btn__l" input type="submit" value="Envianos tu consulta">Envianos tu consulta</button>
-                    <button type="reset" class="btn__l"  value="Limpiar formulario">Limpiar</button>
-                    </div>
-                    <br>
-                    <br>
-                    
-        </form>
-        
+    <hr>
+    <form class="section-contactos__form">
+        <label for='name' class="form-label">Nombre:</label>
+        <input type="text" class="form-control" name="name" id="name" required>
+        <br>
+        <br>
+        <label for='Telefono' class="form-label">Telefono:</label>
+        <input type="text" class="form-control" name="Telefono" id="Telefono" required>
+        <br>
+        <br>
+        <label for="email" class="form-label">Correo Electronico:</label>
+        <input type="email" class="form-control" id="email"required placeholder="ingresa tu corre Electronico">
+        <br>
+        <label for="Tipodeconsulta">Tipo de consulta</label>
+        <select name="Tipo de consulta" id="Tipodeconsulta">
+            <option value="#"></option>
+            <option value="Reprogramacion del vuelo">Reprogramacion del vuelo</option>
+            <option value="reservas">Reservas</option>
+            <option value="administrativo">Administrativo</option>
+            <option value="turismo">Turismo</option>
+            <option value="otros">Otros..</option>
+        </select>
+        <br>
+        <div class="section-contactos__mb-3">
+            <label for="Consultas" class="form-label">Consultas:</label>
+            <textarea class="form-control" id="Consultas" rows="10" ></textarea>
+            <button type="submit" class="btn__l" input type="submit" value="Envianos tu consulta">Envianos tu consulta</button>
+        <button type="reset" class="btn__l"  value="Limpiar formulario">Limpiar</button>
+        </div>
+        <br>
+        <br>    
+    </form>
 <!-------seccion-Maps------>
-        <div >
-                <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.102123074673!2d-58.55841627085595!3d-34.55096961855391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb9fe4f104a0b%3A0x4b261824f04140fb!2sVilla%20Ballester!5e0!3m2!1ses!2sar!4v1673664223263!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="section-contactos__maps">
+        <div class="ratio ratio-16x9">
+            <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.102123074673!2d-58.55841627085595!3d-34.55096961855391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb9fe4f104a0b%3A0x4b261824f04140fb!2sVilla%20Ballester!5e0!3m2!1ses!2sar!4v1673664223263!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
+    </div>
 <!----seccion-consultas---->
-        <div class="div__consultas">
-                <div>
-                    <img class="img-fluid" src="../img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
-                    <p class="pregunta"><strong>"Preguntas Frecuentes"</strong> </p>
-                </div>
-
-                <ul class="ul__consultas">
-                    <li><a class="li__consultas" href="./vuelos.html">¿Cómo conseguir vuelos baratos en SpecialTravel?</a> </li>
-                    <li><a class="li__consultas" href="./vuelos.html">¿Dónde comprar vuelos baratos en SpecialTravel?</a> </li>
-                    <li><a class="li__consultas" href="./paquetes.html">¿Cuándo hay promociones aéreas en SpecialTravel?</a> </li>
-                    <li><a class="li__consultas" href="../index.html">¿Cómo enterarse de las promociones aéreas de SpecialTravel?</a> </li>
-                    <li><a class="li__consultas" href="./alojamientoytraslado.html">¿Donde puedo reservar mi hotel?</a></li>   
-                </ul>
+    <div class="section-contactos__consultas">
+        <div class="section-contactos__img">
+            <img class="img-fluid" src="../img/pregunta.png" height="300px" alt="Preguntasfrecuentes">
         </div>
-    </section>
-
+        <p class="section-contactos__pregunta"><strong>"Preguntas Frecuentes"</strong></p> 
+        <ul class="section-contactos__ul">
+            <li><a class="section-contactos__li" href="./vuelos.html">¿Cómo conseguir vuelos baratos en SpecialTravel? </a></li>
+            <li><a class="section-contactos__li" href="./vuelos.html">¿Dónde comprar vuelos baratos en SpecialTravel?</a> </li>
+            <li><a class="section-contactos__li" href="./paquetes.html">¿hay promociones aéreas en SpecialTravel?</a> </li>
+            <li><a class="section-contactos__li" href="../index.html">¿Cómo enterarse de las promociones aéreas de SpecialTravel? </a></li>
+            <li><a class="section-contactos__li" href="./alojamientoytraslado.html">¿Donde puedo reservar mi hotel?</a></li>   
+        </ul>
+    </div>
+</section>
 </main>
-
+<!------Footer------->
 <footer class="footer">
-        <div class="footer__redes">
-            <a href="#"><img class="redes__item" src="../img/facebook_icon-icons.com_53612.svg"alt="logo de facebook"></a>
-            <a href="#"><img class="redes__item" src="../img/instagram.svg" alt="logo de instagram"></a>
-            <a href="#"><img class="redes__item" src="../img/twitter.png" alt="logo de twitter"></a>
-            <a href="#"><img class="redes__item" src="../img/whatsapp.svg" alt="logo de whatsapp"></a>
-        </div>
-        <div class="footer__Texto">
-            <p>SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
-        </div>
+    <div class="footer__redes">
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/facebook_icon-icons.com_53612.svg"alt="logo de facebook"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/instagram.svg" alt="logo de instagram"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/twitter.png" alt="logo de twitter"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/whatsapp.svg" alt="logo de whatsapp"></a>
+    </div>
+    <div class="footer__Texto">
+        <p class="footer__p">SpecialTravel 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
+    </div>
 </footer>
-
+<!------Script JS------->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+<!-- "METODOLOGIA BEM" 
+.main__contactos
+.section-contactos
+.section-contactos__titulos
+.section-contactos__h1
+.section-contactos__form
+.section-contactos__mb-3
+.section-contactos__maps
+.section-contactos__consultas
+.section-contactos__img
+.section-contactos__pregunta
+.section-contactos__ul
+.section-contactos__li
+-->
